--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,14 +9,18 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li class="p-name">
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
-              {{ site.title | escape }}
-            {%- endif -%}
-            </li>
             {%- if site.website -%}
-            <li><a class="u-email" href="{{ site.website }}">{{ site.website }}</a></li>
+              <a href="{{ site.website }}">{{ site.website }}</a>
+            {%- endif -%}
+
+            <!--{%- if site.author -%}-->
+              <!--{{ site.author | escape }}-->
+            <!--{%- else -%}-->
+              <!--{{ site.title | escape }}-->
+            <!--{%- endif -%}-->
+            </li>
+            {%- if site.email -%}
+            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             {%- endif -%}
         </ul>
       </div>
