--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ layout: default
         </h3>
 
         {%- if post.image -%}
-          <img style="object-fit: cover; max-height: 30vh;" src="{{ post.image | relative_url }}" height="auto" width="100%">
+          <img style="object-fit: cover; max-height: 30vh; margin-bottom: 5px;" src="{{ post.image | relative_url }}" height="auto" width="100%">
           <br>
         {%- endif -%}
 
